// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input: Component should render correctly 1`] = `
<input
  style={
    Object {
      "border": "none",
      "color": "#1d1d20",
      "fontSize": "18px",
      "lineHeight": "24px",
      "outline": "none",
    }
  }
/>
`;

exports[`Input: Component should render with custom styles 1`] = `
<input
  style={
    Object {
      "border": "none",
      "color": "blue",
      "fontSize": "18px",
      "lineHeight": "24px",
      "outline": "none",
    }
  }
/>
`;
